# pico-modem

./: CMakeLists.txt  config.h  main.cpp
driver/: sim7080g.cpp  sim7080g.h
